--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -25,7 +25,7 @@
   height: 1.2rem;
 }
 #search-menu-icon {
-  transition: all 0.15s ease-in-out;
+  transition: opacity 0.15s ease-in-out;
 }
 #search-menu-icon:hover {
   opacity: 0.7;
@@ -37,7 +37,7 @@
 }
 #search-magnifier-icon {
   text-align: center;
-  transition: all 0.15s ease-in-out;
+  transition: opacity 0.15s ease-in-out;
 }
 #search-magnifier-icon:hover {
   opacity: 0.7;
